[package]
name = "rusted_post"
version = "0.1.0"
authors = ["Geoffrey Beausire <g.beausire@criteo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iter-set = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.11"
regex = "1"
itertools = "0.10.0"

[profile.dev]
debug = 2
opt-level = 3