[package]
name = "rusted_post"
version = "0.1.0"
authors = ["Geoffrey Beausire <g.beausire@criteo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
iter-set = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.11"
regex = "1"
regex-syntax = "0.6.23"
itertools = "0.10.0"
bitflags = "1.0"
log = "0.4"
fern = "0.6.0"
chrono = "0.4"
roaring = "0.7.0"
ahash = "0.7.2"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
smallstr = "0.2.0"
smallvec = "1.6.1"
clap = "3.0.0-beta.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer"
harness = false

[profile.dev]
debug = 2
opt-level = 3

[profile.release]
lto = true
opt-level = 3
